--- a/stratsALCKappa5NNRedux.tex
+++ b/stratsALCKappa5NNRedux.tex
@@ -65,45 +65,46 @@
 56-robot nav sensor r... &   0.82/  0.02 &   0.84/  0.02 &   0.81/  0.03 & \textcolor{black}{\textbf{  0.85}}/  0.02 & \textcolor{red}{\textbf{  0.76}}/  0.05 &   0.82/  0.02 &   0.81/  0.02 &   0.84/\textcolor{black}{\textbf{  0.01}} &   0.83/  0.02 & \underline{\textcolor{blue}{\textbf{  0.87}}}/\textcolor{black}{\textbf{  0.01}} \\
 57-saheart &   0.15/  0.08 &   0.15/  0.08 & \underline{\textcolor{blue}{\textbf{  0.20}}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.19}}/  0.09 & \textcolor{black}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.07}} &   0.15/  0.08 &   0.17/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.14}}/  0.08 &   0.18/\textcolor{darkgreen}{\textbf{  0.06}} &   0.17/  0.08 \\
 58-seeds &   0.86/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.04}} &   0.86/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} &   0.86/\textcolor{black}{\textbf{  0.04}} &   0.86/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.04}} &   0.86/\textcolor{black}{\textbf{  0.04}} &   0.86/  0.05 \\
-59-spambase & \textcolor{black}{\textbf{  0.52}}/  0.06 &   0.51/  0.05 & \textcolor{red}{\textbf{  0.27}}/  0.14 &   0.43/  0.09 &   0.47/  0.07 & \textcolor{black}{\textbf{  0.52}}/  0.06 &   0.29/  0.13 & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.04}} &   0.35/  0.11 & \underline{\textcolor{blue}{\textbf{  0.57}}}/\textcolor{black}{\textbf{  0.04}} \\
-60-spect heart & \textcolor{blue}{\textbf{  0.26}}/  0.09 &   0.25/\textcolor{black}{\textbf{  0.07}} &   0.24/\textcolor{black}{\textbf{  0.07}} &   0.25/  0.08 &   0.23/  0.09 & \textcolor{blue}{\textbf{  0.26}}/  0.09 &   0.25/\textcolor{darkgreen}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.21}}/  0.08 &   0.23/  0.09 &   0.24/  0.08 \\ \hline
-61-spectf heart &   0.18/  0.08 & \textcolor{red}{\textbf{  0.17}}/  0.08 & \textcolor{blue}{\textbf{  0.21}}/  0.09 &   0.18/  0.12 &   0.20/  0.09 &   0.18/  0.08 & \textcolor{blue}{\textbf{  0.21}}/\textcolor{darkgreen}{\textbf{  0.06}} &   0.20/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.21}}/  0.08 &   0.18/  0.09 \\
-62-statlog australian... &   0.56/  0.06 & \textcolor{black}{\textbf{  0.58}}/  0.07 & \textcolor{black}{\textbf{  0.58}}/\textcolor{darkgreen}{\textbf{  0.04}} &   0.57/  0.06 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.05}} &   0.56/  0.06 &   0.56/  0.06 & \underline{\textcolor{blue}{\textbf{  0.59}}}/\textcolor{black}{\textbf{  0.05}} &   0.55/  0.06 &   0.56/  0.07 \\
-63-statlog german cre... & \textcolor{black}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.16}}/  0.07 & \textcolor{red}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.17}}}/\textcolor{black}{\textbf{  0.06}} &   0.15/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.06}} &   0.14/\textcolor{black}{\textbf{  0.06}} &   0.15/\textcolor{black}{\textbf{  0.06}} &   0.15/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.06}} \\
-64-statlog heart &   0.49/\textcolor{black}{\textbf{  0.07}} & \underline{\textcolor{blue}{\textbf{  0.52}}}/  0.08 & \textcolor{red}{\textbf{  0.48}}/  0.08 & \textcolor{black}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.48}}/  0.08 &   0.49/\textcolor{black}{\textbf{  0.07}} &   0.49/  0.09 &   0.50/  0.09 &   0.50/  0.09 &   0.49/  0.08 \\\end{tabular}}\label{stratsALCKappa1a5NNRedux}
+59-semeion &   0.67/  0.03 &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.69/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.71}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.65}}/  0.03 &   0.67/  0.03 &   0.70/  0.03 & \textcolor{blue}{\textbf{  0.71}}/\textcolor{black}{\textbf{  0.02}} &   0.70/\textcolor{black}{\textbf{  0.02}} &   0.69/\textcolor{black}{\textbf{  0.02}} \\
+60-spambase & \textcolor{black}{\textbf{  0.52}}/  0.06 &   0.51/  0.05 & \textcolor{red}{\textbf{  0.27}}/  0.14 &   0.43/  0.09 &   0.47/  0.07 & \textcolor{black}{\textbf{  0.52}}/  0.06 &   0.29/  0.13 & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.04}} &   0.35/  0.11 & \underline{\textcolor{blue}{\textbf{  0.57}}}/\textcolor{black}{\textbf{  0.04}} \\ \hline
+61-spect heart & \textcolor{blue}{\textbf{  0.26}}/  0.09 &   0.25/\textcolor{black}{\textbf{  0.07}} &   0.24/\textcolor{black}{\textbf{  0.07}} &   0.25/  0.08 &   0.23/  0.09 & \textcolor{blue}{\textbf{  0.26}}/  0.09 &   0.25/\textcolor{darkgreen}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.21}}/  0.08 &   0.23/  0.09 &   0.24/  0.08 \\
+62-spectf heart &   0.18/  0.08 & \textcolor{red}{\textbf{  0.17}}/  0.08 & \textcolor{blue}{\textbf{  0.21}}/  0.09 &   0.18/  0.12 &   0.20/  0.09 &   0.18/  0.08 & \textcolor{blue}{\textbf{  0.21}}/\textcolor{darkgreen}{\textbf{  0.06}} &   0.20/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.21}}/  0.08 &   0.18/  0.09 \\
+63-statlog australian... &   0.56/  0.06 & \textcolor{black}{\textbf{  0.58}}/  0.07 & \textcolor{black}{\textbf{  0.58}}/\textcolor{darkgreen}{\textbf{  0.04}} &   0.57/  0.06 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.05}} &   0.56/  0.06 &   0.56/  0.06 & \underline{\textcolor{blue}{\textbf{  0.59}}}/\textcolor{black}{\textbf{  0.05}} &   0.55/  0.06 &   0.56/  0.07 \\
+64-statlog german cre... & \textcolor{black}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.16}}/  0.07 & \textcolor{red}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.17}}}/\textcolor{black}{\textbf{  0.06}} &   0.15/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.06}} &   0.14/\textcolor{black}{\textbf{  0.06}} &   0.15/\textcolor{black}{\textbf{  0.06}} &   0.15/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.06}} \\\end{tabular}}\label{stratsALCKappa1a5NNRedux}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{ALCKappa para 5NN: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 65-statlog image segm... &   0.80/  0.02 &   0.82/  0.02 &   0.77/  0.03 &   0.82/  0.02 & \textcolor{red}{\textbf{  0.75}}/  0.03 &   0.80/  0.02 &   0.78/  0.03 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} &   0.79/  0.02 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} \\
-66-statlog landsat sa... &   0.78/  0.03 &   0.79/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.75}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.81}}}/  0.03 &   0.76/  0.04 &   0.78/  0.03 & \textcolor{red}{\textbf{  0.75}}/  0.06 & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} &   0.76/  0.05 &   0.78/\textcolor{black}{\textbf{  0.02}} \\
-67-statlog vehicle si... &   0.44/  0.04 &   0.44/  0.04 &   0.46/\textcolor{black}{\textbf{  0.03}} &   0.45/  0.04 & \textcolor{red}{\textbf{  0.43}}/  0.04 &   0.44/  0.04 &   0.46/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.48}}/  0.04 &   0.46/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.03}} \\
-68-steel plates fault... &   0.79/  0.03 &   0.80/  0.03 &   0.81/  0.02 & \underline{\textcolor{blue}{\textbf{  0.89}}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.72}}/  0.06 &   0.79/  0.03 &   0.83/  0.02 & \textcolor{black}{\textbf{  0.86}}/  0.02 &   0.84/\textcolor{black}{\textbf{  0.01}} &   0.85/  0.02 \\
-69-systhetic control & \textcolor{red}{\textbf{  0.90}}/  0.02 & \textcolor{red}{\textbf{  0.90}}/  0.03 & \textcolor{blue}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.90}}/  0.02 & \textcolor{red}{\textbf{  0.90}}/  0.02 & \textcolor{red}{\textbf{  0.90}}/  0.02 & \textcolor{blue}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.90}}/  0.02 & \textcolor{blue}{\textbf{  0.92}}/  0.02 &   0.91/  0.02 \\
-70-teaching assistant... & \textcolor{red}{\textbf{  0.11}}/  0.12 &   0.14/  0.12 & \textcolor{blue}{\textbf{  0.16}}/  0.11 &   0.13/\textcolor{black}{\textbf{  0.10}} &   0.14/  0.11 & \textcolor{red}{\textbf{  0.11}}/  0.12 &   0.15/\textcolor{black}{\textbf{  0.10}} &   0.12/  0.12 & \textcolor{blue}{\textbf{  0.16}}/  0.11 &   0.15/  0.11 \\
-71-thyroid ann &   0.20/  0.07 & \textcolor{blue}{\textbf{  0.21}}/  0.06 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.04}} &   0.18/  0.06 &   0.17/\textcolor{darkgreen}{\textbf{  0.03}} &   0.20/  0.07 &   0.08/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.21}}/  0.06 &   0.10/  0.05 &   0.19/  0.06 \\ \hline
-72-thyroid hypothyroi... &   0.35/  0.10 &   0.33/  0.12 & \textcolor{red}{\textbf{  0.10}}/\textcolor{black}{\textbf{  0.08}} &   0.27/  0.15 &   0.30/  0.11 &   0.35/  0.10 &   0.11/\textcolor{darkgreen}{\textbf{  0.07}} & \underline{\textcolor{blue}{\textbf{  0.42}}}/\textcolor{black}{\textbf{  0.08}} &   0.11/  0.10 & \textcolor{black}{\textbf{  0.38}}/  0.10 \\
-73-thyroid newthyroid &   0.86/\textcolor{black}{\textbf{  0.06}} &   0.87/\textcolor{black}{\textbf{  0.06}} &   0.87/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.89}}}/\textcolor{darkgreen}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.06}} &   0.86/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.06}} &   0.87/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.06}} &   0.87/  0.07 \\
-74-thyroid sick &   0.23/\textcolor{black}{\textbf{  0.03}} &   0.22/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.18}}/  0.05 &   0.21/  0.04 &   0.21/  0.04 &   0.23/\textcolor{black}{\textbf{  0.03}} &   0.20/  0.05 & \underline{\textcolor{blue}{\textbf{  0.25}}}/  0.04 &   0.20/  0.05 & \textcolor{black}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.03}} \\
-75-thyroid sick euthy... &   0.28/  0.10 &   0.30/  0.09 & \textcolor{red}{\textbf{  0.13}}/  0.08 &   0.18/  0.08 &   0.25/\textcolor{black}{\textbf{  0.07}} &   0.28/  0.10 &   0.14/  0.08 & \textcolor{black}{\textbf{  0.32}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.13}}/  0.09 & \underline{\textcolor{blue}{\textbf{  0.38}}}/\textcolor{darkgreen}{\textbf{  0.06}} \\
-76-tic tac toe &   0.51/  0.05 &   0.53/  0.05 & \textcolor{black}{\textbf{  0.59}}/  0.04 &   0.56/  0.05 & \textcolor{red}{\textbf{  0.50}}/  0.05 &   0.51/  0.05 & \underline{\textcolor{blue}{\textbf{  0.60}}}/\textcolor{black}{\textbf{  0.03}} &   0.53/  0.05 & \textcolor{black}{\textbf{  0.59}}/  0.04 &   0.55/\textcolor{black}{\textbf{  0.03}} \\
-77-turkiye student &   0.11/  0.02 & \textcolor{red}{\textbf{  0.10}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.10}}/  0.02 &   0.11/  0.02 & \textcolor{red}{\textbf{  0.10}}/  0.02 &   0.11/  0.02 &   0.11/  0.02 & \textcolor{blue}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.01}} &   0.11/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.12}}/  0.02 \\
-78-twonorm &   0.82/\textcolor{black}{\textbf{  0.03}} &   0.81/\textcolor{black}{\textbf{  0.03}} &   0.80/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.83}}/  0.05 & \textcolor{blue}{\textbf{  0.83}}/\textcolor{darkgreen}{\textbf{  0.02}} &   0.82/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{blue}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.03}} &   0.80/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.83}}/  0.04 \\ \hline
-79-user knowledge &   0.59/  0.05 &   0.59/  0.04 &   0.59/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.61}}/  0.04 & \textcolor{red}{\textbf{  0.56}}/  0.04 &   0.59/  0.05 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.61}}/  0.04 &   0.60/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.61}}/  0.04 \\
-80-vertebra column 2c & \textcolor{blue}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.07}} &   0.48/  0.08 &   0.43/\textcolor{darkgreen}{\textbf{  0.06}} &   0.44/  0.09 & \textcolor{red}{\textbf{  0.42}}/  0.10 & \textcolor{blue}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.07}} &   0.44/\textcolor{black}{\textbf{  0.07}} &   0.47/\textcolor{black}{\textbf{  0.07}} &   0.44/\textcolor{black}{\textbf{  0.07}} &   0.46/  0.08 \\
-81-vertebra column 3c & \textcolor{blue}{\textbf{  0.58}}/  0.06 & \textcolor{blue}{\textbf{  0.58}}/  0.06 &   0.52/  0.06 & \textcolor{red}{\textbf{  0.51}}/  0.06 & \textcolor{red}{\textbf{  0.51}}/  0.06 & \textcolor{blue}{\textbf{  0.58}}/  0.06 &   0.52/\textcolor{black}{\textbf{  0.05}} &   0.56/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.51}}/  0.06 &   0.57/  0.06 \\
-82-volcanoes a3 & \textcolor{red}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.05}} &   0.27/\textcolor{black}{\textbf{  0.05}} &   0.27/\textcolor{black}{\textbf{  0.05}} &   0.28/\textcolor{black}{\textbf{  0.05}} &   0.28/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.05}} &   0.27/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.05}} &   0.28/  0.06 & \textcolor{blue}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.05}} \\
-83-volcanoes b2 & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.04}} &   0.14/  0.05 & \textcolor{blue}{\textbf{  0.15}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.15}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.15}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.04}} &   0.14/\textcolor{black}{\textbf{  0.04}} &   0.14/\textcolor{darkgreen}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.15}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.15}}/  0.05 \\
-84-volcanoes d1 &   0.08/  0.03 &   0.08/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.02}} &   0.08/  0.03 &   0.08/\textcolor{black}{\textbf{  0.02}} &   0.08/  0.03 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.09}}/  0.03 &   0.08/  0.03 & \textcolor{blue}{\textbf{  0.09}}/  0.04 \\
-85-volcanoes e2 &   0.18/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.17}}/  0.06 & \textcolor{black}{\textbf{  0.20}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.21}}}/  0.06 &   0.18/  0.07 &   0.18/\textcolor{black}{\textbf{  0.05}} &   0.18/  0.08 &   0.19/  0.07 & \textcolor{black}{\textbf{  0.20}}/  0.06 &   0.18/  0.06 \\ \hline
-86-voting &   0.74/  0.08 &   0.75/  0.08 & \textcolor{blue}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.70}}/  0.09 &   0.74/  0.08 & \textcolor{blue}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.07}} &   0.74/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.76}}/  0.08 &   0.74/\textcolor{black}{\textbf{  0.07}} \\
-87-waveform v2 & \textcolor{black}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.48}}/  0.04 &   0.49/  0.03 & \underline{\textcolor{blue}{\textbf{  0.52}}}/  0.03 & \textcolor{red}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.50}}/  0.03 & \textcolor{black}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.50}}/  0.03 & \textcolor{black}{\textbf{  0.50}}/  0.03 \\
-88-wdbc &   0.85/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.87}}/  0.04 &   0.84/  0.04 & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.81}}/  0.05 &   0.85/\textcolor{black}{\textbf{  0.03}} &   0.85/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.86/  0.04 \\
-89-wholesale channel &   0.61/  0.09 & \textcolor{black}{\textbf{  0.64}}/  0.08 &   0.61/  0.07 & \underline{\textcolor{blue}{\textbf{  0.67}}}/  0.08 & \textcolor{red}{\textbf{  0.57}}/  0.10 &   0.61/  0.09 &   0.63/  0.07 &   0.63/\textcolor{black}{\textbf{  0.06}} &   0.63/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.64}}/  0.08 \\
-90-wilt &   0.14/  0.06 & \textcolor{black}{\textbf{  0.16}}/  0.06 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.05}} &   0.09/  0.06 &   0.09/\textcolor{darkgreen}{\textbf{  0.04}} &   0.14/  0.06 &   0.08/\textcolor{black}{\textbf{  0.05}} &   0.15/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.07}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.17}}}/\textcolor{black}{\textbf{  0.05}} \\
-91-wine & \textcolor{red}{\textbf{  0.90}}/  0.04 & \textcolor{red}{\textbf{  0.90}}/  0.04 &   0.91/  0.04 & \textcolor{blue}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.90}}/  0.04 & \textcolor{red}{\textbf{  0.90}}/  0.04 &   0.91/  0.04 & \textcolor{blue}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.03}} &   0.91/  0.04 & \textcolor{blue}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.03}} \\
-92-wine quality white... &   0.12/  0.03 &   0.11/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.10}}/  0.03 & \textcolor{blue}{\textbf{  0.13}}/  0.03 & \textcolor{red}{\textbf{  0.10}}/  0.03 &   0.12/  0.03 & \textcolor{red}{\textbf{  0.10}}/  0.04 &   0.12/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.10}}/  0.03 & \textcolor{blue}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.02}} \\ \hline
-93-yeast 4class &   0.29/\textcolor{black}{\textbf{  0.04}} &   0.30/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.28}}/  0.06 &   0.30/\textcolor{black}{\textbf{  0.04}} &   0.29/\textcolor{black}{\textbf{  0.04}} &   0.29/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.28}}/  0.06 & \textcolor{black}{\textbf{  0.31}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.28}}/  0.05 & \underline{\textcolor{blue}{\textbf{  0.32}}}/\textcolor{darkgreen}{\textbf{  0.03}} \\\end{tabular}}\label{stratsALCKappa2a5NNRedux}
+ & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 65-statlog heart &   0.49/\textcolor{black}{\textbf{  0.07}} & \underline{\textcolor{blue}{\textbf{  0.52}}}/  0.08 & \textcolor{red}{\textbf{  0.48}}/  0.08 & \textcolor{black}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.48}}/  0.08 &   0.49/\textcolor{black}{\textbf{  0.07}} &   0.49/  0.09 &   0.50/  0.09 &   0.50/  0.09 &   0.49/  0.08 \\
+66-statlog image segm... &   0.80/  0.02 &   0.82/  0.02 &   0.77/  0.03 &   0.82/  0.02 & \textcolor{red}{\textbf{  0.75}}/  0.03 &   0.80/  0.02 &   0.78/  0.03 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} &   0.79/  0.02 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} \\
+67-statlog landsat sa... &   0.78/  0.03 &   0.79/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.75}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.81}}}/  0.03 &   0.76/  0.04 &   0.78/  0.03 & \textcolor{red}{\textbf{  0.75}}/  0.06 & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} &   0.76/  0.05 &   0.78/\textcolor{black}{\textbf{  0.02}} \\
+68-statlog vehicle si... &   0.44/  0.04 &   0.44/  0.04 &   0.46/\textcolor{black}{\textbf{  0.03}} &   0.45/  0.04 & \textcolor{red}{\textbf{  0.43}}/  0.04 &   0.44/  0.04 &   0.46/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.48}}/  0.04 &   0.46/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.03}} \\
+69-steel plates fault... &   0.79/  0.03 &   0.80/  0.03 &   0.81/  0.02 & \underline{\textcolor{blue}{\textbf{  0.89}}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.72}}/  0.06 &   0.79/  0.03 &   0.83/  0.02 & \textcolor{black}{\textbf{  0.86}}/  0.02 &   0.84/\textcolor{black}{\textbf{  0.01}} &   0.85/  0.02 \\
+70-systhetic control & \textcolor{red}{\textbf{  0.90}}/  0.02 & \textcolor{red}{\textbf{  0.90}}/  0.03 & \textcolor{blue}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.90}}/  0.02 & \textcolor{red}{\textbf{  0.90}}/  0.02 & \textcolor{red}{\textbf{  0.90}}/  0.02 & \textcolor{blue}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.90}}/  0.02 & \textcolor{blue}{\textbf{  0.92}}/  0.02 &   0.91/  0.02 \\
+71-teaching assistant... & \textcolor{red}{\textbf{  0.11}}/  0.12 &   0.14/  0.12 & \textcolor{blue}{\textbf{  0.16}}/  0.11 &   0.13/\textcolor{black}{\textbf{  0.10}} &   0.14/  0.11 & \textcolor{red}{\textbf{  0.11}}/  0.12 &   0.15/\textcolor{black}{\textbf{  0.10}} &   0.12/  0.12 & \textcolor{blue}{\textbf{  0.16}}/  0.11 &   0.15/  0.11 \\ \hline
+72-thyroid ann &   0.20/  0.07 & \textcolor{blue}{\textbf{  0.21}}/  0.06 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.04}} &   0.18/  0.06 &   0.17/\textcolor{darkgreen}{\textbf{  0.03}} &   0.20/  0.07 &   0.08/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.21}}/  0.06 &   0.10/  0.05 &   0.19/  0.06 \\
+73-thyroid hypothyroi... &   0.35/  0.10 &   0.33/  0.12 & \textcolor{red}{\textbf{  0.10}}/\textcolor{black}{\textbf{  0.08}} &   0.27/  0.15 &   0.30/  0.11 &   0.35/  0.10 &   0.11/\textcolor{darkgreen}{\textbf{  0.07}} & \underline{\textcolor{blue}{\textbf{  0.42}}}/\textcolor{black}{\textbf{  0.08}} &   0.11/  0.10 & \textcolor{black}{\textbf{  0.38}}/  0.10 \\
+74-thyroid newthyroid &   0.86/\textcolor{black}{\textbf{  0.06}} &   0.87/\textcolor{black}{\textbf{  0.06}} &   0.87/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.89}}}/\textcolor{darkgreen}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.06}} &   0.86/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.06}} &   0.87/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.06}} &   0.87/  0.07 \\
+75-thyroid sick &   0.23/\textcolor{black}{\textbf{  0.03}} &   0.22/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.18}}/  0.05 &   0.21/  0.04 &   0.21/  0.04 &   0.23/\textcolor{black}{\textbf{  0.03}} &   0.20/  0.05 & \underline{\textcolor{blue}{\textbf{  0.25}}}/  0.04 &   0.20/  0.05 & \textcolor{black}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.03}} \\
+76-thyroid sick euthy... &   0.28/  0.10 &   0.30/  0.09 & \textcolor{red}{\textbf{  0.13}}/  0.08 &   0.18/  0.08 &   0.25/\textcolor{black}{\textbf{  0.07}} &   0.28/  0.10 &   0.14/  0.08 & \textcolor{black}{\textbf{  0.32}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.13}}/  0.09 & \underline{\textcolor{blue}{\textbf{  0.38}}}/\textcolor{darkgreen}{\textbf{  0.06}} \\
+77-tic tac toe &   0.51/  0.05 &   0.53/  0.05 & \textcolor{black}{\textbf{  0.59}}/  0.04 &   0.56/  0.05 & \textcolor{red}{\textbf{  0.50}}/  0.05 &   0.51/  0.05 & \underline{\textcolor{blue}{\textbf{  0.60}}}/\textcolor{black}{\textbf{  0.03}} &   0.53/  0.05 & \textcolor{black}{\textbf{  0.59}}/  0.04 &   0.55/\textcolor{black}{\textbf{  0.03}} \\
+78-turkiye student &   0.11/  0.02 & \textcolor{red}{\textbf{  0.10}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.10}}/  0.02 &   0.11/  0.02 & \textcolor{red}{\textbf{  0.10}}/  0.02 &   0.11/  0.02 &   0.11/  0.02 & \textcolor{blue}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.01}} &   0.11/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.12}}/  0.02 \\ \hline
+79-twonorm &   0.82/\textcolor{black}{\textbf{  0.03}} &   0.81/\textcolor{black}{\textbf{  0.03}} &   0.80/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.83}}/  0.05 & \textcolor{blue}{\textbf{  0.83}}/\textcolor{darkgreen}{\textbf{  0.02}} &   0.82/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{blue}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.03}} &   0.80/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.83}}/  0.04 \\
+80-user knowledge &   0.59/  0.05 &   0.59/  0.04 &   0.59/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.61}}/  0.04 & \textcolor{red}{\textbf{  0.56}}/  0.04 &   0.59/  0.05 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.61}}/  0.04 &   0.60/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.61}}/  0.04 \\
+81-vertebra column 2c & \textcolor{blue}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.07}} &   0.48/  0.08 &   0.43/\textcolor{darkgreen}{\textbf{  0.06}} &   0.44/  0.09 & \textcolor{red}{\textbf{  0.42}}/  0.10 & \textcolor{blue}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.07}} &   0.44/\textcolor{black}{\textbf{  0.07}} &   0.47/\textcolor{black}{\textbf{  0.07}} &   0.44/\textcolor{black}{\textbf{  0.07}} &   0.46/  0.08 \\
+82-vertebra column 3c & \textcolor{blue}{\textbf{  0.58}}/  0.06 & \textcolor{blue}{\textbf{  0.58}}/  0.06 &   0.52/  0.06 & \textcolor{red}{\textbf{  0.51}}/  0.06 & \textcolor{red}{\textbf{  0.51}}/  0.06 & \textcolor{blue}{\textbf{  0.58}}/  0.06 &   0.52/\textcolor{black}{\textbf{  0.05}} &   0.56/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.51}}/  0.06 &   0.57/  0.06 \\
+83-volcanoes a3 & \textcolor{red}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.05}} &   0.27/\textcolor{black}{\textbf{  0.05}} &   0.27/\textcolor{black}{\textbf{  0.05}} &   0.28/\textcolor{black}{\textbf{  0.05}} &   0.28/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.05}} &   0.27/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.05}} &   0.28/  0.06 & \textcolor{blue}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.05}} \\
+84-volcanoes b2 & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.04}} &   0.14/  0.05 & \textcolor{blue}{\textbf{  0.15}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.15}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.15}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.04}} &   0.14/\textcolor{black}{\textbf{  0.04}} &   0.14/\textcolor{darkgreen}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.15}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.15}}/  0.05 \\
+85-volcanoes d1 &   0.08/  0.03 &   0.08/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.02}} &   0.08/  0.03 &   0.08/\textcolor{black}{\textbf{  0.02}} &   0.08/  0.03 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.09}}/  0.03 &   0.08/  0.03 & \textcolor{blue}{\textbf{  0.09}}/  0.04 \\ \hline
+86-volcanoes e2 &   0.18/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.17}}/  0.06 & \textcolor{black}{\textbf{  0.20}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.21}}}/  0.06 &   0.18/  0.07 &   0.18/\textcolor{black}{\textbf{  0.05}} &   0.18/  0.08 &   0.19/  0.07 & \textcolor{black}{\textbf{  0.20}}/  0.06 &   0.18/  0.06 \\
+87-voting &   0.74/  0.08 &   0.75/  0.08 & \textcolor{blue}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.70}}/  0.09 &   0.74/  0.08 & \textcolor{blue}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.07}} &   0.74/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.76}}/  0.08 &   0.74/\textcolor{black}{\textbf{  0.07}} \\
+88-waveform v2 & \textcolor{black}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.48}}/  0.04 &   0.49/  0.03 & \underline{\textcolor{blue}{\textbf{  0.52}}}/  0.03 & \textcolor{red}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.50}}/  0.03 & \textcolor{black}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.50}}/  0.03 & \textcolor{black}{\textbf{  0.50}}/  0.03 \\
+89-wdbc &   0.85/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.87}}/  0.04 &   0.84/  0.04 & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.81}}/  0.05 &   0.85/\textcolor{black}{\textbf{  0.03}} &   0.85/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.86/  0.04 \\
+90-wholesale channel &   0.61/  0.09 & \textcolor{black}{\textbf{  0.64}}/  0.08 &   0.61/  0.07 & \underline{\textcolor{blue}{\textbf{  0.67}}}/  0.08 & \textcolor{red}{\textbf{  0.57}}/  0.10 &   0.61/  0.09 &   0.63/  0.07 &   0.63/\textcolor{black}{\textbf{  0.06}} &   0.63/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.64}}/  0.08 \\
+91-wilt &   0.14/  0.06 & \textcolor{black}{\textbf{  0.16}}/  0.06 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.05}} &   0.09/  0.06 &   0.09/\textcolor{darkgreen}{\textbf{  0.04}} &   0.14/  0.06 &   0.08/\textcolor{black}{\textbf{  0.05}} &   0.15/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.07}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.17}}}/\textcolor{black}{\textbf{  0.05}} \\
+92-wine & \textcolor{red}{\textbf{  0.90}}/  0.04 & \textcolor{red}{\textbf{  0.90}}/  0.04 &   0.91/  0.04 & \textcolor{blue}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.90}}/  0.04 & \textcolor{red}{\textbf{  0.90}}/  0.04 &   0.91/  0.04 & \textcolor{blue}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.03}} &   0.91/  0.04 & \textcolor{blue}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.03}} \\ \hline
+93-wine quality white... &   0.12/  0.03 &   0.11/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.10}}/  0.03 & \textcolor{blue}{\textbf{  0.13}}/  0.03 & \textcolor{red}{\textbf{  0.10}}/  0.03 &   0.12/  0.03 & \textcolor{red}{\textbf{  0.10}}/  0.04 &   0.12/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.10}}/  0.03 & \textcolor{blue}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.02}} \\
+94-yeast 4class &   0.29/\textcolor{black}{\textbf{  0.04}} &   0.30/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.28}}/  0.06 &   0.30/\textcolor{black}{\textbf{  0.04}} &   0.29/\textcolor{black}{\textbf{  0.04}} &   0.29/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.28}}/  0.06 & \textcolor{black}{\textbf{  0.31}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.28}}/  0.05 & \underline{\textcolor{blue}{\textbf{  0.32}}}/\textcolor{darkgreen}{\textbf{  0.03}} \\\end{tabular}}\label{stratsALCKappa2a5NNRedux}
 \end{center}
 \end{table}
