--- a/stratsALCKappaFriedC4.5wRedux.tex
+++ b/stratsALCKappaFriedC4.5wRedux.tex
@@ -8,8 +8,8 @@
 4 - EERent	& * & * & * & - & * & * &   &   &   &   \\ \hline
 5 - EERacu	& + &   &   &   & - &   &   &   &   &   \\
 6 - \textbf{SGmulti}	&   &   &   &   &   & - &   &   &   &   \\ \hline
-7 - TUman	& * & * & + &   & + & * & - &   &   &   \\
-8 - \textbf{ATUman}	& * & * & * &   & + & * &   & - &   &   \\ \hline
+7 - TUman	& * & * & * &   & + & * & - &   &   &   \\
+8 - \textbf{ATUman}	& * & * & * &   & * & * &   & - &   &   \\ \hline
 9 - TUmah	& * & + & + &   & . & * &   &   & - &   \\
 10 - \textbf{ATUmah}	& * &   &   &   &   & + &   &   &   & - \\ \hline\end{tabular}
 \label{stratsALCKappaFriedC4.5wRedux}
