--- a/stratsALCKappaFriedNBRedux.tex
+++ b/stratsALCKappaFriedNBRedux.tex
@@ -5,7 +5,7 @@
 1 - Rnd  	& - &   &   &   &   &   &   &   &   &   \\
 2 - Clu  	&   & - &   &   &   &   &   &   &   &   \\ \hline
 3 - Mar  	&   &   & - &   &   &   &   &   &   &   \\
-4 - EERent	& * & * & * & - & * &   &   &   & * & * \\ \hline
+4 - EERent	& * & * & * & - & * & . &   &   & * & * \\ \hline
 5 - EERacu	&   &   &   &   & - &   &   &   &   &   \\
 6 - \textbf{SGmulti}	& + &   &   &   &   & - &   &   &   &   \\ \hline
 7 - TUman	& * & . &   &   & . &   & - &   & . &   \\
