--- a/stratsALCKappaNBRedux.tex
+++ b/stratsALCKappaNBRedux.tex
@@ -65,45 +65,46 @@
 56-robot nav sensor r... & \textcolor{red}{\textbf{  0.91}}/  0.02 &   0.93/\textcolor{black}{\textbf{  0.01}} &   0.92/  0.03 & \textcolor{blue}{\textbf{  0.96}}/\textcolor{black}{\textbf{  0.01}} &   0.92/  0.02 &   0.93/  0.03 & \textcolor{blue}{\textbf{  0.96}}/\textcolor{black}{\textbf{  0.01}} &   0.94/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.96}}/\textcolor{black}{\textbf{  0.01}} &   0.94/\textcolor{black}{\textbf{  0.01}} \\
 57-saheart & \textcolor{black}{\textbf{  0.24}}/  0.07 &   0.22/\textcolor{black}{\textbf{  0.06}} &   0.22/  0.08 & \underline{\textcolor{blue}{\textbf{  0.28}}}/  0.08 &   0.23/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.24}}/  0.07 & \textcolor{black}{\textbf{  0.24}}/  0.07 & \textcolor{black}{\textbf{  0.24}}/  0.07 & \textcolor{red}{\textbf{  0.16}}/  0.07 & \textcolor{red}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.06}} \\
 58-seeds & \textcolor{red}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.05}} &   0.81/\textcolor{black}{\textbf{  0.05}} &   0.81/\textcolor{black}{\textbf{  0.05}} &   0.82/  0.06 &   0.81/\textcolor{black}{\textbf{  0.05}} &   0.81/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.05}} &   0.81/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.83}}/  0.06 &   0.81/\textcolor{black}{\textbf{  0.05}} \\
-59-spambase &   0.71/  0.03 &   0.70/  0.04 &   0.65/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.02}} &   0.71/  0.03 &   0.73/  0.03 & \textcolor{red}{\textbf{  0.63}}/  0.03 &   0.72/  0.03 &   0.65/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.02}} \\
-60-spect heart &   0.34/  0.12 &   0.32/  0.13 & \textcolor{blue}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.10}} &   0.30/  0.15 &   0.33/  0.12 &   0.34/  0.11 & \textcolor{blue}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.10}} &   0.32/  0.13 &   0.29/\textcolor{black}{\textbf{  0.10}} & \textcolor{red}{\textbf{  0.25}}/\textcolor{darkgreen}{\textbf{  0.07}} \\ \hline
-61-spectf heart &   0.28/  0.10 &   0.30/  0.11 & \textcolor{red}{\textbf{  0.24}}/  0.10 &   0.28/  0.10 &   0.29/\textcolor{black}{\textbf{  0.09}} &   0.28/  0.10 &   0.25/  0.10 & \underline{\textcolor{blue}{\textbf{  0.32}}}/  0.11 &   0.27/\textcolor{black}{\textbf{  0.09}} & \textcolor{black}{\textbf{  0.31}}/\textcolor{darkgreen}{\textbf{  0.08}} \\
-62-statlog australian... &   0.63/  0.06 &   0.64/  0.05 &   0.64/  0.06 &   0.63/  0.05 &   0.62/  0.07 & \textcolor{black}{\textbf{  0.65}}/  0.05 & \underline{\textcolor{blue}{\textbf{  0.68}}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.65}}/  0.05 & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.61}}/  0.05 \\
-63-statlog german cre... & \textcolor{blue}{\textbf{  0.06}}/  0.06 & \textcolor{blue}{\textbf{  0.06}}/  0.07 & \textcolor{blue}{\textbf{  0.06}}/  0.06 & \textcolor{blue}{\textbf{  0.06}}/  0.06 &   0.04/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.06}}/  0.06 & \textcolor{red}{\textbf{  0.03}}/\textcolor{darkgreen}{\textbf{  0.03}} &   0.04/  0.05 & \textcolor{red}{\textbf{  0.03}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.06}}/  0.05 \\
-64-statlog heart &   0.54/  0.09 &   0.53/  0.08 &   0.53/\textcolor{black}{\textbf{  0.07}} & \underline{\textcolor{blue}{\textbf{  0.57}}}/  0.11 & \textcolor{black}{\textbf{  0.55}}/  0.08 &   0.54/  0.09 &   0.52/\textcolor{darkgreen}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.55}}/  0.08 & \textcolor{red}{\textbf{  0.51}}/  0.08 &   0.54/  0.09 \\\end{tabular}}\label{stratsALCKappa1aNBRedux}
+59-semeion &   0.45/  0.04 &   0.41/  0.05 & \textcolor{red}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.49}}}/  0.04 &   0.45/  0.05 &   0.44/  0.04 &   0.38/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.03}} &   0.43/  0.04 \\
+60-spambase &   0.71/  0.03 &   0.70/  0.04 &   0.65/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.02}} &   0.71/  0.03 &   0.73/  0.03 & \textcolor{red}{\textbf{  0.63}}/  0.03 &   0.72/  0.03 &   0.65/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.02}} \\ \hline
+61-spect heart &   0.34/  0.12 &   0.32/  0.13 & \textcolor{blue}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.10}} &   0.30/  0.15 &   0.33/  0.12 &   0.34/  0.11 & \textcolor{blue}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.10}} &   0.32/  0.13 &   0.29/\textcolor{black}{\textbf{  0.10}} & \textcolor{red}{\textbf{  0.25}}/\textcolor{darkgreen}{\textbf{  0.07}} \\
+62-spectf heart &   0.28/  0.10 &   0.30/  0.11 & \textcolor{red}{\textbf{  0.24}}/  0.10 &   0.28/  0.10 &   0.29/\textcolor{black}{\textbf{  0.09}} &   0.28/  0.10 &   0.25/  0.10 & \underline{\textcolor{blue}{\textbf{  0.32}}}/  0.11 &   0.27/\textcolor{black}{\textbf{  0.09}} & \textcolor{black}{\textbf{  0.31}}/\textcolor{darkgreen}{\textbf{  0.08}} \\
+63-statlog australian... &   0.63/  0.06 &   0.64/  0.05 &   0.64/  0.06 &   0.63/  0.05 &   0.62/  0.07 & \textcolor{black}{\textbf{  0.65}}/  0.05 & \underline{\textcolor{blue}{\textbf{  0.68}}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.65}}/  0.05 & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.61}}/  0.05 \\
+64-statlog german cre... & \textcolor{blue}{\textbf{  0.06}}/  0.06 & \textcolor{blue}{\textbf{  0.06}}/  0.07 & \textcolor{blue}{\textbf{  0.06}}/  0.06 & \textcolor{blue}{\textbf{  0.06}}/  0.06 &   0.04/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.06}}/  0.06 & \textcolor{red}{\textbf{  0.03}}/\textcolor{darkgreen}{\textbf{  0.03}} &   0.04/  0.05 & \textcolor{red}{\textbf{  0.03}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.06}}/  0.05 \\\end{tabular}}\label{stratsALCKappa1aNBRedux}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{ALCKappa para NB: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 65-statlog image segm... & \textcolor{red}{\textbf{  0.75}}/  0.03 &   0.77/  0.02 &   0.79/  0.03 &   0.80/  0.02 &   0.76/  0.03 &   0.80/  0.02 & \underline{\textcolor{blue}{\textbf{  0.83}}}/\textcolor{black}{\textbf{  0.01}} &   0.79/  0.02 & \textcolor{black}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.01}} &   0.77/  0.02 \\
-66-statlog landsat sa... &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.72}}/  0.03 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.72}}/  0.03 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} &   0.75/  0.03 &   0.76/\textcolor{black}{\textbf{  0.02}} \\
-67-statlog vehicle si... &   0.29/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.27}}/\textcolor{black}{\textbf{  0.03}} &   0.30/  0.05 &   0.30/  0.04 &   0.28/\textcolor{black}{\textbf{  0.03}} &   0.29/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.31}}/  0.04 &   0.28/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.31}}/  0.05 &   0.29/\textcolor{darkgreen}{\textbf{  0.02}} \\
-68-steel plates fault... & \textcolor{red}{\textbf{  0.29}}/  0.08 &   0.42/  0.07 & \underline{\textcolor{blue}{\textbf{  0.55}}}/  0.05 & \textcolor{red}{\textbf{  0.29}}/  0.10 &   0.42/  0.07 &   0.31/  0.07 &   0.51/  0.05 &   0.33/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.52}}/  0.06 &   0.36/\textcolor{black}{\textbf{  0.04}} \\
-69-systhetic control & \textcolor{red}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.02}} &   0.87/\textcolor{black}{\textbf{  0.02}} &   0.88/  0.03 &   0.90/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.85}}/  0.05 & \textcolor{blue}{\textbf{  0.91}}/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.91}}/  0.03 &   0.86/\textcolor{black}{\textbf{  0.02}} &   0.89/  0.04 &   0.86/\textcolor{black}{\textbf{  0.02}} \\
-70-teaching assistant... &   0.15/  0.06 & \textcolor{black}{\textbf{  0.17}}/  0.07 &   0.15/  0.08 &   0.16/  0.07 & \textcolor{black}{\textbf{  0.17}}/  0.08 &   0.16/  0.07 & \underline{\textcolor{blue}{\textbf{  0.18}}}/  0.07 &   0.16/  0.07 &   0.01/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{darkgreen}{\textbf{  0.01}} \\
-71-thyroid ann & \textcolor{red}{\textbf{  0.54}}/  0.09 &   0.65/  0.09 & \underline{\textcolor{blue}{\textbf{  0.78}}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.76}}/\textcolor{darkgreen}{\textbf{  0.06}} &   0.65/  0.10 &   0.60/  0.09 &   0.75/  0.12 &   0.60/  0.09 &   0.74/  0.12 &   0.57/  0.10 \\ \hline
-72-thyroid hypothyroi... & \textcolor{red}{\textbf{  0.55}}/  0.10 &   0.61/  0.15 & \textcolor{black}{\textbf{  0.77}}/  0.13 & \underline{\textcolor{blue}{\textbf{  0.81}}}/  0.12 &   0.76/\textcolor{black}{\textbf{  0.07}} &   0.58/  0.11 &   0.67/  0.23 &   0.64/  0.09 &   0.70/  0.11 &   0.59/\textcolor{darkgreen}{\textbf{  0.05}} \\
-73-thyroid newthyroid &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 & \textcolor{red}{\textbf{  0.78}}/  0.09 & \underline{\textcolor{blue}{\textbf{  0.86}}}/  0.07 &   0.81/  0.06 &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.81/  0.06 & \textcolor{black}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.05}} &   0.81/  0.06 & \textcolor{black}{\textbf{  0.85}}/  0.07 \\
-74-thyroid sick &   0.26/  0.05 &   0.27/  0.05 &   0.29/\textcolor{darkgreen}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.30}}/  0.06 &   0.27/\textcolor{black}{\textbf{  0.04}} &   0.28/  0.05 & \underline{\textcolor{blue}{\textbf{  0.31}}}/\textcolor{black}{\textbf{  0.04}} &   0.28/  0.05 & \textcolor{red}{\textbf{  0.09}}/  0.05 &   0.11/  0.05 \\
-75-thyroid sick euthy... & \textcolor{red}{\textbf{  0.37}}/  0.12 &   0.44/  0.17 & \textcolor{blue}{\textbf{  0.69}}/\textcolor{darkgreen}{\textbf{  0.06}} &   0.55/\textcolor{black}{\textbf{  0.09}} &   0.55/  0.13 &   0.43/  0.11 & \textcolor{blue}{\textbf{  0.69}}/  0.10 &   0.48/\textcolor{black}{\textbf{  0.09}} &   0.68/  0.10 &   0.61/\textcolor{black}{\textbf{  0.09}} \\
-76-tic tac toe &   0.24/  0.06 &   0.23/  0.05 &   0.27/  0.05 &   0.18/  0.07 &   0.22/  0.05 & \textcolor{blue}{\textbf{  0.28}}/  0.05 & \textcolor{blue}{\textbf{  0.28}}/  0.05 &   0.25/  0.05 &   0.10/\textcolor{darkgreen}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.09}}/\textcolor{black}{\textbf{  0.04}} \\
-77-turkiye student & \textcolor{blue}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.18}}/  0.02 & \textcolor{blue}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.19}}/  0.02 & \textcolor{blue}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.18}}/  0.02 & \textcolor{red}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.01}} \\
-78-twonorm &   0.75/  0.02 &   0.75/  0.03 & \textcolor{red}{\textbf{  0.65}}/  0.02 & \underline{\textcolor{blue}{\textbf{  0.80}}}/\textcolor{black}{\textbf{  0.01}} &   0.75/  0.04 &   0.75/  0.03 &   0.67/  0.02 &   0.75/  0.02 &   0.66/  0.02 & \textcolor{black}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.01}} \\ \hline
-79-user knowledge &   0.66/\textcolor{black}{\textbf{  0.03}} &   0.66/  0.04 &   0.65/  0.06 & \textcolor{blue}{\textbf{  0.68}}/  0.04 &   0.67/  0.04 &   0.66/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.63}}/  0.06 & \textcolor{blue}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.03}} &   0.64/  0.06 &   0.67/\textcolor{black}{\textbf{  0.03}} \\
-80-vertebra column 2c & \textcolor{red}{\textbf{  0.46}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.46}}/\textcolor{black}{\textbf{  0.06}} &   0.48/\textcolor{black}{\textbf{  0.06}} &   0.48/  0.07 &   0.48/\textcolor{black}{\textbf{  0.06}} &   0.47/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.50}}/  0.07 &   0.48/  0.07 &   0.49/  0.07 \\
-81-vertebra column 3c & \textcolor{red}{\textbf{  0.57}}/  0.05 &   0.58/  0.05 & \textcolor{black}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.04}} &   0.60/  0.05 &   0.59/  0.05 &   0.59/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.62}}}/\textcolor{black}{\textbf{  0.04}} &   0.58/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.04}} &   0.58/  0.05 \\
-82-volcanoes a3 &   0.13/  0.12 &   0.15/  0.11 &   0.14/  0.12 &   0.14/  0.11 &   0.11/  0.11 &   0.15/  0.13 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.18}}/  0.09 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.18}}/  0.13 \\
-83-volcanoes b2 &   0.13/  0.12 &   0.13/  0.10 &   0.12/  0.13 & \underline{\textcolor{blue}{\textbf{  0.22}}}/  0.11 &   0.12/  0.12 & \textcolor{black}{\textbf{  0.14}}/  0.13 & \textcolor{red}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.07}} &   0.12/  0.09 & \textcolor{red}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.07}} &   0.10/\textcolor{black}{\textbf{  0.07}} \\
-84-volcanoes d1 & \textcolor{blue}{\textbf{  0.03}}/  0.05 &   0.02/  0.03 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.01/  0.01 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.03}}/  0.05 &   0.01/  0.01 & \textcolor{blue}{\textbf{  0.03}}/  0.05 &   0.01/  0.01 & \textcolor{blue}{\textbf{  0.03}}/  0.04 \\
-85-volcanoes e2 &   0.01/  0.02 & \textcolor{blue}{\textbf{  0.02}}/  0.05 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.01/  0.01 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.01/  0.02 &   0.01/  0.01 & \textcolor{blue}{\textbf{  0.02}}/  0.03 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.02}}/  0.02 \\ \hline
-86-voting &   0.71/  0.08 &   0.72/  0.07 & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.69}}/  0.07 &   0.74/  0.08 &   0.76/  0.07 & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.06}} &   0.72/  0.08 & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.06}} &   0.74/  0.07 \\
-87-waveform v2 &   0.62/  0.02 &   0.62/  0.02 &   0.62/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.63}}/  0.02 & \textcolor{red}{\textbf{  0.61}}/  0.02 &   0.62/  0.02 &   0.62/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.63}}/  0.02 &   0.62/  0.02 & \textcolor{blue}{\textbf{  0.63}}/  0.02 \\
-88-wdbc &   0.86/  0.03 &   0.86/  0.03 &   0.86/  0.03 & \textcolor{blue}{\textbf{  0.87}}/  0.03 & \textcolor{red}{\textbf{  0.84}}/  0.03 &   0.86/  0.03 & \textcolor{blue}{\textbf{  0.87}}/  0.03 &   0.86/  0.03 & \textcolor{blue}{\textbf{  0.87}}/  0.03 &   0.85/  0.03 \\
-89-wholesale channel & \textcolor{red}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.07}} &   0.76/  0.08 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.07}} &   0.76/\textcolor{black}{\textbf{  0.07}} &   0.76/\textcolor{black}{\textbf{  0.07}} &   0.76/  0.08 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.75}}/  0.08 \\
-90-wilt &   0.01/  0.01 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.02/  0.04 & \textcolor{blue}{\textbf{  0.03}}/  0.08 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.01/  0.01 & \textcolor{blue}{\textbf{  0.03}}/  0.06 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/  0.01 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} \\
-91-wine &   0.91/\textcolor{black}{\textbf{  0.03}} &   0.91/\textcolor{black}{\textbf{  0.03}} &   0.92/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.89}}/  0.04 &   0.92/\textcolor{black}{\textbf{  0.03}} &   0.92/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.03}} &   0.91/\textcolor{black}{\textbf{  0.03}} &   0.92/\textcolor{black}{\textbf{  0.03}} \\
-92-wine quality white... & \textcolor{blue}{\textbf{  0.10}}/  0.05 &   0.09/\textcolor{black}{\textbf{  0.04}} &   0.09/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.10}}/  0.05 &   0.09/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.10}}/  0.05 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.04}} &   0.09/\textcolor{black}{\textbf{  0.04}} &   0.09/\textcolor{black}{\textbf{  0.04}} &   0.09/\textcolor{black}{\textbf{  0.04}} \\ \hline
-93-yeast 4class &   0.28/  0.04 & \textcolor{blue}{\textbf{  0.29}}/  0.04 & \textcolor{red}{\textbf{  0.27}}/  0.04 &   0.28/  0.04 & \textcolor{red}{\textbf{  0.27}}/  0.04 &   0.28/  0.04 &   0.28/  0.04 &   0.28/  0.04 & \textcolor{blue}{\textbf{  0.29}}/  0.04 & \textcolor{blue}{\textbf{  0.29}}/  0.04 \\\end{tabular}}\label{stratsALCKappa2aNBRedux}
+ & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 65-statlog heart &   0.54/  0.09 &   0.53/  0.08 &   0.53/\textcolor{black}{\textbf{  0.07}} & \underline{\textcolor{blue}{\textbf{  0.57}}}/  0.11 & \textcolor{black}{\textbf{  0.55}}/  0.08 &   0.54/  0.09 &   0.52/\textcolor{darkgreen}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.55}}/  0.08 & \textcolor{red}{\textbf{  0.51}}/  0.08 &   0.54/  0.09 \\
+66-statlog image segm... & \textcolor{red}{\textbf{  0.75}}/  0.03 &   0.77/  0.02 &   0.79/  0.03 &   0.80/  0.02 &   0.76/  0.03 &   0.80/  0.02 & \underline{\textcolor{blue}{\textbf{  0.83}}}/\textcolor{black}{\textbf{  0.01}} &   0.79/  0.02 & \textcolor{black}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.01}} &   0.77/  0.02 \\
+67-statlog landsat sa... &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.72}}/  0.03 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.72}}/  0.03 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} &   0.75/  0.03 &   0.76/\textcolor{black}{\textbf{  0.02}} \\
+68-statlog vehicle si... &   0.29/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.27}}/\textcolor{black}{\textbf{  0.03}} &   0.30/  0.05 &   0.30/  0.04 &   0.28/\textcolor{black}{\textbf{  0.03}} &   0.29/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.31}}/  0.04 &   0.28/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.31}}/  0.05 &   0.29/\textcolor{darkgreen}{\textbf{  0.02}} \\
+69-steel plates fault... & \textcolor{red}{\textbf{  0.29}}/  0.08 &   0.42/  0.07 & \underline{\textcolor{blue}{\textbf{  0.55}}}/  0.05 & \textcolor{red}{\textbf{  0.29}}/  0.10 &   0.42/  0.07 &   0.31/  0.07 &   0.51/  0.05 &   0.33/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.52}}/  0.06 &   0.36/\textcolor{black}{\textbf{  0.04}} \\
+70-systhetic control & \textcolor{red}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.02}} &   0.87/\textcolor{black}{\textbf{  0.02}} &   0.88/  0.03 &   0.90/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.85}}/  0.05 & \textcolor{blue}{\textbf{  0.91}}/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.91}}/  0.03 &   0.86/\textcolor{black}{\textbf{  0.02}} &   0.89/  0.04 &   0.86/\textcolor{black}{\textbf{  0.02}} \\
+71-teaching assistant... &   0.15/  0.06 & \textcolor{black}{\textbf{  0.17}}/  0.07 &   0.15/  0.08 &   0.16/  0.07 & \textcolor{black}{\textbf{  0.17}}/  0.08 &   0.16/  0.07 & \underline{\textcolor{blue}{\textbf{  0.18}}}/  0.07 &   0.16/  0.07 &   0.01/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{darkgreen}{\textbf{  0.01}} \\ \hline
+72-thyroid ann & \textcolor{red}{\textbf{  0.54}}/  0.09 &   0.65/  0.09 & \underline{\textcolor{blue}{\textbf{  0.78}}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.76}}/\textcolor{darkgreen}{\textbf{  0.06}} &   0.65/  0.10 &   0.60/  0.09 &   0.75/  0.12 &   0.60/  0.09 &   0.74/  0.12 &   0.57/  0.10 \\
+73-thyroid hypothyroi... & \textcolor{red}{\textbf{  0.55}}/  0.10 &   0.61/  0.15 & \textcolor{black}{\textbf{  0.77}}/  0.13 & \underline{\textcolor{blue}{\textbf{  0.81}}}/  0.12 &   0.76/\textcolor{black}{\textbf{  0.07}} &   0.58/  0.11 &   0.67/  0.23 &   0.64/  0.09 &   0.70/  0.11 &   0.59/\textcolor{darkgreen}{\textbf{  0.05}} \\
+74-thyroid newthyroid &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 & \textcolor{red}{\textbf{  0.78}}/  0.09 & \underline{\textcolor{blue}{\textbf{  0.86}}}/  0.07 &   0.81/  0.06 &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.81/  0.06 & \textcolor{black}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.05}} &   0.81/  0.06 & \textcolor{black}{\textbf{  0.85}}/  0.07 \\
+75-thyroid sick &   0.26/  0.05 &   0.27/  0.05 &   0.29/\textcolor{darkgreen}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.30}}/  0.06 &   0.27/\textcolor{black}{\textbf{  0.04}} &   0.28/  0.05 & \underline{\textcolor{blue}{\textbf{  0.31}}}/\textcolor{black}{\textbf{  0.04}} &   0.28/  0.05 & \textcolor{red}{\textbf{  0.09}}/  0.05 &   0.11/  0.05 \\
+76-thyroid sick euthy... & \textcolor{red}{\textbf{  0.37}}/  0.12 &   0.44/  0.17 & \textcolor{blue}{\textbf{  0.69}}/\textcolor{darkgreen}{\textbf{  0.06}} &   0.55/\textcolor{black}{\textbf{  0.09}} &   0.55/  0.13 &   0.43/  0.11 & \textcolor{blue}{\textbf{  0.69}}/  0.10 &   0.48/\textcolor{black}{\textbf{  0.09}} &   0.68/  0.10 &   0.61/\textcolor{black}{\textbf{  0.09}} \\
+77-tic tac toe &   0.24/  0.06 &   0.23/  0.05 &   0.27/  0.05 &   0.18/  0.07 &   0.22/  0.05 & \textcolor{blue}{\textbf{  0.28}}/  0.05 & \textcolor{blue}{\textbf{  0.28}}/  0.05 &   0.25/  0.05 &   0.10/\textcolor{darkgreen}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.09}}/\textcolor{black}{\textbf{  0.04}} \\
+78-turkiye student & \textcolor{blue}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.18}}/  0.02 & \textcolor{blue}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.19}}/  0.02 & \textcolor{blue}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.18}}/  0.02 & \textcolor{red}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.01}} \\ \hline
+79-twonorm &   0.75/  0.02 &   0.75/  0.03 & \textcolor{red}{\textbf{  0.65}}/  0.02 & \underline{\textcolor{blue}{\textbf{  0.80}}}/\textcolor{black}{\textbf{  0.01}} &   0.75/  0.04 &   0.75/  0.03 &   0.67/  0.02 &   0.75/  0.02 &   0.66/  0.02 & \textcolor{black}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.01}} \\
+80-user knowledge &   0.66/\textcolor{black}{\textbf{  0.03}} &   0.66/  0.04 &   0.65/  0.06 & \textcolor{blue}{\textbf{  0.68}}/  0.04 &   0.67/  0.04 &   0.66/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.63}}/  0.06 & \textcolor{blue}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.03}} &   0.64/  0.06 &   0.67/\textcolor{black}{\textbf{  0.03}} \\
+81-vertebra column 2c & \textcolor{red}{\textbf{  0.46}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.46}}/\textcolor{black}{\textbf{  0.06}} &   0.48/\textcolor{black}{\textbf{  0.06}} &   0.48/  0.07 &   0.48/\textcolor{black}{\textbf{  0.06}} &   0.47/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.50}}/  0.07 &   0.48/  0.07 &   0.49/  0.07 \\
+82-vertebra column 3c & \textcolor{red}{\textbf{  0.57}}/  0.05 &   0.58/  0.05 & \textcolor{black}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.04}} &   0.60/  0.05 &   0.59/  0.05 &   0.59/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.62}}}/\textcolor{black}{\textbf{  0.04}} &   0.58/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.04}} &   0.58/  0.05 \\
+83-volcanoes a3 &   0.13/  0.12 &   0.15/  0.11 &   0.14/  0.12 &   0.14/  0.11 &   0.11/  0.11 &   0.15/  0.13 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.18}}/  0.09 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.18}}/  0.13 \\
+84-volcanoes b2 &   0.13/  0.12 &   0.13/  0.10 &   0.12/  0.13 & \underline{\textcolor{blue}{\textbf{  0.22}}}/  0.11 &   0.12/  0.12 & \textcolor{black}{\textbf{  0.14}}/  0.13 & \textcolor{red}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.07}} &   0.12/  0.09 & \textcolor{red}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.07}} &   0.10/\textcolor{black}{\textbf{  0.07}} \\
+85-volcanoes d1 & \textcolor{blue}{\textbf{  0.03}}/  0.05 &   0.02/  0.03 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.01/  0.01 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.03}}/  0.05 &   0.01/  0.01 & \textcolor{blue}{\textbf{  0.03}}/  0.05 &   0.01/  0.01 & \textcolor{blue}{\textbf{  0.03}}/  0.04 \\ \hline
+86-volcanoes e2 &   0.01/  0.02 & \textcolor{blue}{\textbf{  0.02}}/  0.05 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.01/  0.01 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.01/  0.02 &   0.01/  0.01 & \textcolor{blue}{\textbf{  0.02}}/  0.03 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.02}}/  0.02 \\
+87-voting &   0.71/  0.08 &   0.72/  0.07 & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.69}}/  0.07 &   0.74/  0.08 &   0.76/  0.07 & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.06}} &   0.72/  0.08 & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.06}} &   0.74/  0.07 \\
+88-waveform v2 &   0.62/  0.02 &   0.62/  0.02 &   0.62/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.63}}/  0.02 & \textcolor{red}{\textbf{  0.61}}/  0.02 &   0.62/  0.02 &   0.62/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.63}}/  0.02 &   0.62/  0.02 & \textcolor{blue}{\textbf{  0.63}}/  0.02 \\
+89-wdbc &   0.86/  0.03 &   0.86/  0.03 &   0.86/  0.03 & \textcolor{blue}{\textbf{  0.87}}/  0.03 & \textcolor{red}{\textbf{  0.84}}/  0.03 &   0.86/  0.03 & \textcolor{blue}{\textbf{  0.87}}/  0.03 &   0.86/  0.03 & \textcolor{blue}{\textbf{  0.87}}/  0.03 &   0.85/  0.03 \\
+90-wholesale channel & \textcolor{red}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.07}} &   0.76/  0.08 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.07}} &   0.76/\textcolor{black}{\textbf{  0.07}} &   0.76/\textcolor{black}{\textbf{  0.07}} &   0.76/  0.08 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.75}}/  0.08 \\
+91-wilt &   0.01/  0.01 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.02/  0.04 & \textcolor{blue}{\textbf{  0.03}}/  0.08 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.01/  0.01 & \textcolor{blue}{\textbf{  0.03}}/  0.06 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/  0.01 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} \\
+92-wine &   0.91/\textcolor{black}{\textbf{  0.03}} &   0.91/\textcolor{black}{\textbf{  0.03}} &   0.92/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.89}}/  0.04 &   0.92/\textcolor{black}{\textbf{  0.03}} &   0.92/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.03}} &   0.91/\textcolor{black}{\textbf{  0.03}} &   0.92/\textcolor{black}{\textbf{  0.03}} \\ \hline
+93-wine quality white... & \textcolor{blue}{\textbf{  0.10}}/  0.05 &   0.09/\textcolor{black}{\textbf{  0.04}} &   0.09/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.10}}/  0.05 &   0.09/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.10}}/  0.05 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.04}} &   0.09/\textcolor{black}{\textbf{  0.04}} &   0.09/\textcolor{black}{\textbf{  0.04}} &   0.09/\textcolor{black}{\textbf{  0.04}} \\
+94-yeast 4class &   0.28/  0.04 & \textcolor{blue}{\textbf{  0.29}}/  0.04 & \textcolor{red}{\textbf{  0.27}}/  0.04 &   0.28/  0.04 & \textcolor{red}{\textbf{  0.27}}/  0.04 &   0.28/  0.04 &   0.28/  0.04 &   0.28/  0.04 & \textcolor{blue}{\textbf{  0.29}}/  0.04 & \textcolor{blue}{\textbf{  0.29}}/  0.04 \\\end{tabular}}\label{stratsALCKappa2aNBRedux}
 \end{center}
 \end{table}
