--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1467,3 +1467,18 @@ keywords = "Meta-learning systems "
   pages =       "3--13",
   URL =         "http://dx.doi.org/10.1016/j.neucom.2011.07.005",
 }
+
+@Article{journals/tit/Barron93,
+  title =       "Universal approximation bounds for superpositions of a
+                 sigmoidal function",
+  author =      "Andrew R. Barron",
+  journal =     "IEEE Transactions on Information Theory",
+  year =        "1993",
+  number =      "3",
+  volume =      "39",
+  bibdate =     "2011-10-31",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/tit/tit39.html#Barron93",
+  pages =       "930--945",
+  URL =         "http://dx.doi.org/10.1109/18.256500",
+}
