--- a/stratsALCKappaFried5NNRedux.tex
+++ b/stratsALCKappaFried5NNRedux.tex
@@ -11,7 +11,7 @@
 7 - TUman	&   &   &   &   & * &   & - &   &   &   \\
 8 - \textbf{ATUman}	& * & * & * &   & * & * & * & - & * &   \\ \hline
 9 - TUmah	&   &   &   &   & * &   &   &   & - &   \\
-10 - \textbf{ATUmah}	& * & + & * &   & * & * & + &   & + & - \\ \hline\end{tabular}
+10 - \textbf{ATUmah}	& * & + & * &   & * & * & . &   & + & - \\ \hline\end{tabular}
 \label{stratsALCKappaFried5NNRedux}
 \end{center}
 \end{table}
